--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,3 +53,16 @@
 > .code-box-demo > .ant-layout + .ant-layout {
   margin-top: 48px;
 }
+
+.ant-dropdown-menu {
+  padding: 5pt 0;
+}
+
+.ant-dropdown-menu-item {
+  padding: 0 10pt;
+}
+
+.ant-dropdown-menu-submenu-title {
+  padding-top: 0;
+  padding-bottom: 0;
+}
