--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,52 @@
+body {
+  position: fixed;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+}
+
+header, footer {
+  flex-grow: 0;
+  flex-shrink: 0;
+  width: 100%;
+}
+
+header {
+	display: flex;
+	align-items: center;
+	background: whitesmoke;
+	border-bottom: 1px solid lightgray;
+}
+
+footer {
+  background: gray;
+  height: 24px;
+}
+
+section {
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  height: 100%;
+}
+
+.row {
+  flex-direction: row;
+}
+
+.column {
+  flex-direction: column;
+}
+
+.divider {
+  width: -50px;
+  background: gray;
+  cursor: col-resize;
+}
+
 .titleBar {
   border-bottom: 1px solid lightgrey;
 }
