--- a/client/src/components/GitTreeView.css
+++ b/client/src/components/GitTreeView.css
@@ -1,5 +1,6 @@
 ul {
 	padding-left: 12px;
+	margin: 0
 }
 
 li {
@@ -7,17 +8,19 @@ li {
 	flex-direction: row;
 	flex-shrink: 0;
 	flex-grow: 0;
+	align-items: center;
 }
 
 .git-tree {
 	display: block;
 	overflow: scroll;
 	height: 100%;
+	font-size: smaller;
 }
 
 .item-label {
 	display: flex;
-	padding-right: 5px;
+	padding: 3px 5px 3px 0;
 	border-radius: 4px;
 	cursor: pointer;
 }
@@ -28,7 +31,6 @@ li {
 
 .git-tree-item-icon {
 	width: 24px;
-	height: 24px;
 	text-align: center;
 	display: block;
 	flex-shrink: 0;
@@ -37,7 +39,6 @@ li {
 
 .git-tree-collapse-icon {
 	width: 12px;
-	height: 24px;
 	text-align: center;
 	display: block;
 	flex-shrink: 0;
