--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,8 +7,10 @@
 }
 
 header, footer {
+	display: flex;
 	flex-grow: 0;
 	flex-shrink: 0;
+	align-items: center;
 }
 
 section {
@@ -17,15 +19,18 @@ section {
 }
 
 header {
-	display: flex;
-	align-items: center;
+	padding: 10px 20px;
 	background: whitesmoke;
 	border-bottom: 1px solid lightgray;
 }
 
 footer {
-	background: gray;
+	color: dimgray;
+	background: whitesmoke;
+	border-top: 1px solid lightgray;
 	height: 24px;
+	padding: 0 10px;
+	font-weight: 500;
 }
 
 .divider {
@@ -101,4 +106,34 @@ footer {
 .ant-dropdown-menu-submenu-title {
 	padding-top: 0;
 	padding-bottom: 0;
+}
+
+.dropdown-btn {
+	border: 0;
+	background: transparent;
+	line-height: 20px;
+	border-radius: 4px;
+	cursor: pointer;
+	background: ghostwhite;
+	height: 20px;
+	border-radius: 11px;
+	border: 1px solid silver;
+	padding: 0 10px;
+}
+
+.dropdown-btn::after {
+	font-family: 'Font Awesome 5 Free';
+	font-weight: 900;
+	content: "\f0d7";
+	margin-left: 5px;
+}
+
+.dropdown-btn:hover {
+	background: rgba(50, 50, 180, 0.1);
+}
+
+.separator {
+	font-size: large;
+	color: gray;
+	margin: 0 5px;
 }
