Introduced RepoViewerContext for selecting nodes and made breadcrumbs clickable

--- a/client/src/components/FileNavigator.css
+++ b/client/src/components/FileNavigator.css
@@ -4,8 +4,14 @@
 }
 
 .breadcrumb {
+	color: dimgray;
 	display: inline;
 	padding: 0;
+	cursor: pointer;
+}
+
+.breadcrumb:hover {
+	color: black;
 }
 
 .breadcrumb::before {
